--- a/client/src/Cards/Cards.css
+++ b/client/src/Cards/Cards.css
@@ -12,21 +12,21 @@ body {
 .cards-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  margin-left: 20%;
-  justify-content: space-around; 
+  gap: 5px;
+  margin-left: 18%;
+  justify-content:center; 
 }
 
 .card {
   flex: 1 1 calc(25% - 20px);
   max-width: 300px;
   border: 1px solid #ccc;
-  border-radius: 8px;
+  border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  margin: 10px;
+  margin: 5px;
   background: #fff;
-  width: 80%; 
+  width: 60%; 
   border-radius: 0.6em;
   overflow: hidden;
   cursor: pointer;
@@ -45,8 +45,8 @@ body {
 
 .card img {
   width: 100%;
-  height: 450px;
-  object-fit: cover;
+  height: 350px;
+  object-fit:fill;
   display: block;
 }
 
